--- a/css/style.css
+++ b/css/style.css
@@ -12,4 +12,20 @@ h1{
 .same{
     width: 300px;
     height: 300px;
+    border-radius: 50px;
+    border-style: hidden;
+}
+
+.logo{
+    width: 100px;
+    height: 100px;
+}
+
+h2{
+    color: white;
+}
+
+li{
+    padding: 20px;
+    font-weight: bold;
 }
