--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,11 @@ body{
 }
 
 h1{
-    background-color: black;
+    background-color: brown;
     text-align: center;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
 }
 
 .same{
@@ -23,8 +25,10 @@ h1{
 }
 
 h2{
-    background-color: black;
+    background-color:brown;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
 }
 
 li{
