--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body{
-    background-color: blueviolet;
+    background-color: black;
     margin: 25px;
     padding: 5px;
+    color: yellow;
 }
 
 h1{
@@ -24,7 +25,7 @@ h1{
     height: 35px;
 }
 
-h2{
+h3{
     background-color:brown;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -34,6 +35,7 @@ h2{
 li{
     padding: 20px;
     font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .app{
