--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,10 @@ body{
 }
 
 h1{
-    background-color: black;
+    background-color: gold;
     text-align: center;
-    color: white;
+    color: purple;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #same{
@@ -18,9 +19,9 @@ h1{
 }
 
 .same{
-    width: 300px;
-    height: 300px;
-    border-radius: 150px;
+    width: 400px;
+    height: 400px;
+    border-radius: 250px;
     border-style: hidden;
 }
 
@@ -33,6 +34,7 @@ h2{
     text-align: center;
     background-color: gold;
     color: purple;
+    font-family: Arial, Helvetica, sans-serif;
     
 }
 
